# phomes

./: .dockerignore  .gitignore  Dockerfile  README.md  USAGE.md  api.py  cli.py  config.py  data_storage.py  docker-compose.yml  evaluation.py  models.py  pyproject.toml  registry.py  shared.py
data_catalog/: index.json
data_catalog/versions/: v1.json  v2.json  v3.json  v4.json
experiments/: registry.json
experiments/gradient_boost_20250813_170200/: metadata.json  model.pkl  predictions.csv
experiments/knn_baseline_20250813_170334/: metadata.json  predictions.csv
experiments/knn_baseline_20250813_171117/: metadata.json
experiments/random_forest_20250813_170233/: metadata.json  predictions.csv
scripts/: analyze_correlations.py
tests/: test_api.py  test_performance.py
